<resources>
    <string name="app_name">myMapsInit</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">myMaps</string>
    <string name="option1">Option 1</string>
    <string name="option2">Option 2</string>
    <string name="option3">Option 3</string>
    <string name="drawer_opened">Open</string>
    <string name="drawer_closed">Close</string>
    <string name="option4">Option 4</string>
    <string name="option5">Option 5</string>
    <string name="option6">Option 6</string>
</resources>