<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single"
        android:id="@+id/menu_group1"
        >
        <item
            android:id="@+id/option1"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/option1"
            android:checked="true"

            />
        <item
            android:id="@+id/option2"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/option2"
            app:iconTint="@color/purple_500"/>
        <item
            android:id="@+id/option3"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/option3" />
    </group>
    <group
        android:id="@+id/menu_group2"
        android:checkableBehavior="single">
        <item
            android:id="@+id/option4"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/option4"
            />
        <item
            android:id="@+id/option5"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/option5" />
        <item
            android:id="@+id/option6"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/option6" />
    </group>
</menu>